data/derived/comb/progs/unify/prog6679.ml.out
Characters 160-161:
  List.fold_left f base List.rev(combined);;
                 ^
Error: This expression has type int * int list -> int * int -> int * int list
       but an expression was expected of type ('a -> 'b) -> 'c -> 'a -> 'b
       Type int * int list is not compatible with type 'a -> 'b 
